fix: way too big icons

--- a/src/App.css
+++ b/src/App.css
@@ -379,8 +379,8 @@ input.age-verification {
   }
   */
   .MobilePreview .mobile-preview {
-    max-width: 18em;
-    width: 18em;
+    max-width: 28em;
+    width: 28em;
   }
   .Auth .HomeView .header {
     max-width: 45em;
